--- a/r/re/red/redenergy.com.au.html
+++ b/r/re/red/redenergy.com.au.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the redenergy.com.au privacy policy that was archived on 2009-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090419002715id_/http%3A//www.redenergy.com.au/page.html%3Fprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redenergy.com.au privacy policy that was archived on 2009-10-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091017154045id_/http%3A//www.redenergy.com.au/page.html%3Fprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head style="">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="Australian energy company, Red Energy, supplies electricity to homes across Victoria. Red Energy is a retailer of electricity in Victoria Australia and plans to shake up the energy scene by providing discounts and flexible payments.">
-<meta name="keywords" content="Red Energy,energy,electricity company,electricity,energy company,discounted electricity,discounted electricity,energy company,hydro generation,wind energy,electricity retailer,electricity generation,electricity supplier,electricity retailer,metre reading,meter reading,renewable energy,electricity industry,energy supply victoria,red energy,electricity companies,Australian electricity companies,Australian electricity companies,supply,Victoria">
+<meta name="description" content="">
+<meta name="keywords" content="">
 <meta name="copyright" content="Copyright 2009 Red Energy">
-<meta name="author" content="Bland Consulting">
+<meta name="author" content="Zest Media Ltd">
 <meta name="robots" content="index, follow">
 <meta name="verify-v1" content="1aIRFLoMrB5PJN7YdMV/LPvVEXWdVt5X/JfEdint0o8=">
-<title>privacy - Red Energy</title>
+<title>Privacy Policy | Red Energy</title>
 
 <!-- Framework CSS -->
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection">
@@ -36,7 +36,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-var pageTrackerBland = _gat._getTracker("UA-2618385-24");
+var pageTrackerBland = _gat._getTracker("UA-8686543-1");
 var pageTrackerRed = _gat._getTracker("UA-626210-11");
 var _POPUP_FEATURES = ''; //'location=0,statusbar=0,menubar=0,scrollbars=1,width=400,height=500';
 listen('load', window, function() 
@@ -54,17 +54,17 @@ listen('load', window, function()
 	<div id="global" class="clearfix">
 		<div id="navHome" class="clearfix">
 			<ul class="navHoriz">
-				<li class="li1 "><a href="http://www.redenergy.com.au" title="Home" class="">Home</a></li>
-				<li class="li2 "><a href="page.html?about" title="About US" class="">About Us</a></li>
-				<li class="li3 "><a href="page.html?contact" title="Contact Us" class="">Contact Us</a></li>
-				<li class="li4 "><a href="page.html?partners" title="Partners" class="">Partners</a></li>
-				<li class="li5 "><a href="page.html?careers" title="Careers" class="">Careers</a></li>
-				<li class="li6  li-last"><a href="page.html?faq" title="FAQs" class="">FAQs</a></li>
+				<li class="li1 "><a href="http://www.redenergy.com.au" title="Red Energy's Home" class="">Home</a></li>
+				<li class="li2 "><a href="page.html?about" title="About Us - It's all good" class="">About Us</a></li>
+				<li class="li3 "><a href="page.html?contact" title="Get in touch" class="">Contact Us</a></li>
+				<li class="li4 "><a href="page.html?partners" title="Our Partners" class="">Partners</a></li>
+				<li class="li5 "><a href="page.html?careers" title="Career Opportunities" class="">Careers</a></li>
+				<li class="li6  li-last"><a href="page.html?faq" title="Frequently Asked Questions" class="">FAQs</a></li>
 			</ul>
 		</div><!-- #navHome -->
 		<div id="navViral" class="navHoriz clearfix">
 			<ul>
-				<!--<li class="li1  li-last"><a href="http://www.redenergy.com.au/referafriend" title="" class="js-popup-new">Recommend A Friend</a></li>-->
+				<!--<li class="li1  li-last"><a href="http://www.redenergy.com.au/referafriend" title="Recommend a Friend" class="js-popup-new">Recommend A Friend</a></li>-->
 			</ul>
 		</div><!-- #navViral -->
 	</div><!-- #global -->
@@ -81,17 +81,17 @@ listen('load', window, function()
 		<div id="navMainWrap" class="clearfix">
 			<div id="navMain" class="clearfix">
 				<ul class="navHoriz">
-					<li class="li1 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?products" title="" class="">Our Products</a></span></span></span></li>
-					<li class="li2 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?moving-connecting" title="" class="">Moving Home &amp; Connecting</a></span></span></span></li>
-					<li class="li3 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?renewable-energy" title="" class="">Renewable Energy</a></span></span></span></li>
-					<li class="li4 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?billing" title="" class="">Billing &amp; Payment Options</a></span></span></span></li>
-					<li class="li5  "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?saving-energy" title="" class="">Saving Energy</a></span></span></span></li>
+					<li class="li1 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?products" title="Renewable energy options made simple" class="">Our Products</a></span></span></span></li>
+					<li class="li2 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?moving-connecting" title="Moving and Connecting your Home" class="">Moving Home &amp; Connecting</a></span></span></span></li>
+					<li class="li3 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?renewable-energy" title="Renewable Energy Explained" class="">Renewable Energy</a></span></span></span></li>
+					<li class="li4 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?billing" title="About Your Bill" class="">Billing &amp; Payment Options</a></span></span></span></li>
+					<li class="li5  "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?saving-energy" title="About Saving Energy " class="">Saving Energy</a></span></span></span></li>
 				</ul>
 			</div><!-- #navMain -->
 			<div id="navFunc" class="clearfix">
 				<ul class="navHoriz">
-					<li class="li1"><span class="el1"><span class="el2"><a onclick="pageTrackerBland._trackPageview('/GetQuote');pageTrackerRed._trackPageview('/GetQuote');" href="http://www.redenergy.com.au/epis" title="" class="js-popup-new">Get Quote</a></span></span></li>
-					<li class="li2 li-last"><span class="el1"><span class="el2"><a onclick="pageTrackerBland._trackPageview('/PostBillPay');pageTrackerRed._trackPageview('/PostBillPay');" href="https://paypaperbills.postbillpay.com.au/billpay/default.asp?AP:OR=124" title="" class="js-popup-new">Online Payment</a></span></span></li>
+					<li class="li2 "><span class="el1"><span class="el2"><span class="el3"><a href="page.html?get-quote" title="Get a Quote" class="">Get a Quote</a></span></span></span></li>
+					<li class="li2 li-last"><span class="el1"><span class="el2"><a onclick="pageTrackerBland._trackPageview('/PostBillPay');pageTrackerRed._trackPageview('/PostBillPay');" href="https://paypaperbills.postbillpay.com.au/billpay/default.asp?AP:OR=124" title="Online Bill Payment" class="js-popup-new">Online Payment</a></span></span></li>
 				</ul>
 			</div><!-- #navFunc -->
 		</div>
@@ -115,20 +115,20 @@ listen('load', window, function()
 	<p>Where there is a registration facility on our  website, we will ask you whether you want us to send you personalised emails,  mail and other communications with news, special offers and other matters which  may be of interest to you. You can say no to this service either when you  register or by <a href="page.html?contact">contacting us</a>.</p>
 	<p>We will maintain the security of your personal  information in accordance with our <a href="page.html?security">Security Policy</a>.  However, we may share your personal information with:</p>
 	<ul class="basicList">
-		<li>any network operator that we work with to       supply energy to you, if they request it;</li>
+		<li>any network operator that we work with to supply energy to you, if they request it;</li>
 		<li>our related companies;</li>
-		<li>any of our service providers including       organisations that assist us with billing, meter reading, connections and       repairs, technology and security services; and</li>
-		<li>our professional advisers including       lawyers, marketing and business advisers and auditors.</li>
+		<li>any of our service providers including organisations that assist us with billing, meter reading, connections and repairs, technology and security services; and</li>
+		<li>our professional advisers including lawyers, marketing and business advisers and auditors.</li>
 	</ul>
 	<p>Where this involves transferring your personal  information to another country, we observe applicable privacy law and  principles. Otherwise we will only release your personal  information and collect other information about you if you authorise us to do  this, if we are legally required or authorised to, or to enable us to:</p>
 	<ul class="basicList">
-		<li>carry out credit checks or otherwise       assess your creditworthiness; or </li>
-		<li>carry out our responsibilities, or       exercise our rights under our energy supply agreement with you; or </li>
-		<li>advise you of any products or services       which we consider may be of interest to you; or</li>
-		<li>conduct, or contact you for the purpose of       market research; or </li>
+		<li>carry out credit checks or otherwise assess your creditworthiness; or </li>
+		<li>carry out our responsibilities, or exercise our rights under our energy supply agreement with you; or </li>
+		<li>advise you of any products or services which we consider may be of interest to you; or</li>
+		<li>conduct, or contact you for the purpose of market research; or </li>
 		<li>collect debts; or </li>
-		<li>implement any scheme for the payment of       rebates or granting of concessions to customers; or</li>
-		<li>provide you with any services you have       requested. </li>
+		<li>implement any scheme for the payment of rebates or granting of concessions to customers; or</li>
+		<li>provide you with any services you have requested. </li>
 	</ul>
 	<p>If you want to request access to personal  information we hold about you, just <a href="page.html?contact">contact us</a>.  Please provide as much detail as you can about the particular information you  seek in order to help us retrieve it. In accordance with the Privacy Act, a fee  may be charged to cover our costs of providing access to you. You may ask for  any of your personal information to be corrected, so that it is accurate,  complete and up to date. We will consider any such request in good faith and  inform you of the action taken.</p>
 	<p>We may conduct customer surveys on the website to  collect statistics for marketing and research purposes. You can choose not to  participate in these surveys.</p>
@@ -137,8 +137,8 @@ listen('load', window, function()
 	<p>Red Energy uses 'cookies' to provide a secure,  personalised experience on the website. Cookies are small data files that a  website is able to place on a user’s computer hard drive or in its memory to  record aspects of that user’s experience of the website. On this website  cookies will never contain or store any information about a user - they will  simply be used as an identifier. You'll need to have cookies 'enabled' in your  browser to access the signed in areas of our site. </p>
 	<p>This website uses cookies in two different ways:</p>
 	<ul class="basicList">
-		<li>When you are browsing any part of our site       we will use a cookie that is stored on a computer's hard drive to track       where visitors go on the site. The cookie does not allow us to identify       any individual.</li>
-		<li>When you register and sign in to the       secure, personalised area of the website we'll send you a secure cookie       that will only last for the duration of your session. This secure cookie       will be stored in your computer's memory rather than on your hard drive,       and it maintains the security of your session.</li>
+		<li>When you are browsing any part of our site we will use a cookie that is stored on a computer's hard drive to track where visitors go on the site. The cookie does not allow us to identify any individual.</li>
+		<li>When you register and sign in to the secure, personalised area of the website we'll send you a secure cookie that will only last for the duration of your session. This secure cookie will be stored in your computer's memory rather than on your hard drive, and it maintains the security of your session.</li>
 	</ul>
 	<p>This website also uses clear gifs for technical  spacing purposes on the website. We do not use clear gifs or web beacons for  tracking your activity on the website. <br>
 		Variations to this Privacy Policy</p>
@@ -158,7 +158,7 @@ document.write('<img src="img/brand_image_'+Math.ceil(Math.random()*15)+'.jpg" a
 <div class="callout purple "><div class="el1"><div class="el2"><div class="el3">
 <h3>Thinking about switching?</h3>
 <p style="margin-bottom:1em;">Whether you're <a href="page.html?moving-connecting" title="Moving Home">moving home</a> or reconsidering your current energy supplier, Red can help. </p>
-<p>Get a <a href="http://www.redenergy.com.au/epis/app" title="Get a Quote Online" class="js-popup-new">quote online</a> or call us today on 131 806</p>
+<p>Get a <a href="page.html?get-quote" title="Get a Quote Online">quote online</a> or call us today on 131 806</p>
 </div></div></div></div>
 </div>
 
@@ -175,12 +175,12 @@ document.write('<img src="img/brand_image_'+Math.ceil(Math.random()*15)+'.jpg" a
 		<div id="copyright"><ul><li>© Red Energy Pty Ltd 2009</li></ul></div>
 		<div id="navComp" class="clearfix">
 			<ul class="navHoriz">
-				<li class="li1 "><a href="page.html?terms" title="" class="">Website Terms of Use</a></li>
-				<li class="li2 current "><a href="page.html?privacy" title="" class="">Privacy Policy</a></li>
-				<li class="li3 "><a href="page.html?security" title="" class="">Security</a></li>
-				<!--<li class="li4 "><a href="page.html?hardship" title="" class="">Hardship Policy</a></li>-->
-				<li class="li5 "><a href="page.html?links" title="" class="">Links</a></li>
-				<li class="li6  li-last"><a href="page.html?products-more_info" title="" class="">Standing Offers</a></li>
+				<li class="li1 "><a href="page.html?terms" title="Our Website Terms of Use" class="">Website Terms of Use</a></li>
+				<li class="li2 current "><a href="page.html?privacy" title="Our Privacy Policy" class="">Privacy Policy</a></li>
+				<li class="li3 "><a href="page.html?security" title="Security Technology" class="">Security</a></li>
+				<!--<li class="li4 "><a href="page.html?hardship" title="Our Hardship Policy" class="">Hardship Policy</a></li>-->
+				<li class="li5 "><a href="page.html?links" title="Related Links" class="">Links</a></li>
+				<li class="li6  li-last"><a href="page.html?products-more_info" title="Our Standing Offers" class="">Standing Offers</a></li>
 			</ul>
 		</div><!-- #navComp -->
 	</div><!-- #footer -->
