--- a/k/ki/kip/kiplinger.com.html
+++ b/k/ki/kip/kiplinger.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kiplinger.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617040556id_/http%3A//www.kiplinger.com/gateway/about/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kiplinger.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018184525id_/http%3A//www.kiplinger.com/gateway/about/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>The Kiplinger Store</title>
@@ -177,19 +177,20 @@ qacct:"p-d1r-YOBiI91NE",
 labels:""
 };
 </script>
+
 <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 <noscript>
 <a href="http://www.quantcast.com/p-d1r-YOBiI91NE" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-d1r-YOBiI91NE.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
 </noscript>
-<!-- End Quantcast tag -->
-
-<script type="text/javascript">
+<!-- End Quantcast tag --><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
 var pageTracker = _gat._getTracker("UA-4337061-4");
+pageTracker._setDomainName(".kiplinger.com");
 pageTracker._trackPageview();
 </script>
+
 
 </body></html>
