--- a/s/sc/scr/scrubsunlimited.com.html
+++ b/s/sc/scr/scrubsunlimited.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scrubsunlimited.com privacy policy that was archived on 2009-03-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090313004549id_/http%3A//www.scrubsunlimited.com/index.asp%3FPageAction%3DCustom%26ID%3D3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scrubsunlimited.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018193309id_/http%3A//www.scrubsunlimited.com/index.asp%3FPageAction%3DCustom%26ID%3D3) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Privacy Policy</title>
 	<meta name="description" content="Scrubs Unlimited - cotton lab coats and scrubs at discount prices. Fashion Seal, Medline Scrubs, Dickies Scrubs with all heart cotton!">
@@ -103,7 +103,7 @@ Scrubs</strong></font></a></td></tr>
 
 
 <tr>
-<td class="NAVSideMenu" onmouseleave="mhHover('LeftNavToolbar', 5 , 'NAVSideMenu')" onmouseenter="mhHover('LeftNavToolbar', 5, 'NAVSideMenu1')" nowrap="" height="16"><a class="LeftNav" href="index.asp?PageAction=VIEWCATS&amp;Category=11"><font size="2"><strong>Kids Scrubs</strong></font></a></td></tr>
+<td class="NAVSideMenu" onmouseleave="mhHover('LeftNavToolbar', 5 , 'NAVSideMenu')" onmouseenter="mhHover('LeftNavToolbar', 5, 'NAVSideMenu1')" nowrap="" height="16"><a class="LeftNav" href="index.asp?PageAction=VIEWCATS&amp;Category=11"><font size="2"><strong>Kids Scrubs/Lab Coats</strong></font></a></td></tr>
 
 
 
