--- a/p/pu/pub/publicjobs.ie.html
+++ b/p/pu/pub/publicjobs.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the publicjobs.ie privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617224921id_/http%3A//www.publicjobs.ie/en/site/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publicjobs.ie privacy policy that was archived on 2009-10-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091019094730id_/http%3A//www.publicjobs.ie/en/site/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -49,7 +49,7 @@
 
 <!-- new -->
 	<div id="header">
-		<div class="lang"><p><span class="on">English</span>&nbsp;|&nbsp;<a href="../../changelanguage.asp?strLang=IRISH">Gaeilge</a></p><p align="center"><br><a href="/site/accessibility.asp">Accessibility</a></p></div><!-- end lang -->
+		<div class="lang"><p><span class="on">English</span>&nbsp;|&nbsp;<a href="../../changelanguage.asp?strLang=IRISH">../../Gaeilge</a></p><p align="center"><br><a href="/en/site/accessibility.asp">Accessibility</a></p></div><!-- end lang -->
 		<a href="../../home.asp"><img src="../../img/logo.gif" alt="publicjobs.ie"></a>
 	</div><!-- end header -->
 <!-- end new -->
