--- a/p/pu/pub/publr.com.html
+++ b/p/pu/pub/publr.com.html
@@ -1,59 +1,34 @@
-<!--The following is the downloaded HTML source of the publr.com privacy policy that was archived on 2009-04-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090428133208id_/http%3A//publr.com/learn/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publr.com privacy policy that was archived on 2009-10-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091019120209id_/http%3A//www.publr.com/learn/privacy) for the most accurate reproduction.-->
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 		<title>Publr - Privacy Policy</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 				<meta name="abstract" content="Publr - easy blog and media publishing.">
-		<meta name="author" content="Netfire Media">
+		<meta name="author" content="Cancel Print">
 		<meta name="programmer" content="Tommy Cutter">
 		<meta http-equiv="imagetoolbar" content="no">
-		<link rel="stylesheet" href="/assets/css/master.css" type="text/css" media="screen">
+		<meta name="google-site-verification" content="4yADpwKv71fTtQarBghk-7Pc_kTU0l4WTZD7d5dBevI">
+		
 		<link rel="shortcut icon" href="/assets/images/favicon.gif" type="image/x-icon">
 		<link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png"> 
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="/rss">
 		
-		<link rel="stylesheet" href="/assets/css/selects.css" type="text/css" media="screen" title="select-box-styles" charset="utf-8">
+		<link rel="stylesheet" href="/assets/css/screen.1251121269.css" type="text/css" media="screen" title="master-style-list">
+		<link rel="stylesheet" href="/assets/css/thickbox.1251121271.css" type="text/css" media="screen" title="thickbox-styles">
 		
-		
-		<script src="/assets/js/jquery-1.3.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/assets/js/global.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/assets/js/swfobject.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="/assets/js/jquery.selectbox-0.3.js" type="text/javascript" charset="utf-8"></script>
-		
-						<!--[if lt IE 8]>
-		<script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script>
-		<![endif]-->
-		<!--[if IE]>
-		<link rel="stylesheet" href="/assets/css/ie.css" type="text/css" media="screen" />
-		<![endif]-->
-		
-		<!-- tinyMCE -->
-		<script type="text/javascript" src="/assets/js/tiny_mce/tiny_mce.js"></script>
+		<script src="http://www.google.com/jsapi"></script>
 		<script type="text/javascript">
-			tinyMCE.init({
-				mode : "textareas",
-				theme : "advanced",
-				theme_advanced_buttons1 : "bold,italic,underline,strikethrough,undo,redo,link,htmlbutton",
-				theme_advanced_buttons2 : "",
-				theme_advanced_buttons3 : "",
-				theme_advanced_resizing : true,
-				editor_deselector : "mceNoEditor",
-				setup : function(ed) {
-			        // Add a custom button
-			        ed.addButton('htmlbutton', {
-			            title : 'Toggle HTML',
-			            image : '/assets/images/html-btn.gif',
-			            onclick : function() {
-			                toggleEditor();
-			            }
-			        });
-			    }
-			});
-		</script><script type="text/javascript" src="https://web.archive.org/assets/js/tiny_mce/langs/en.js" onload="tinymce.dom.ScriptLoader._onLoad(this,'https://web.archive.org/assets/js/tiny_mce/langs/en.js',0);"></script><script type="text/javascript" src="https://web.archive.org/assets/js/tiny_mce/themes/advanced/editor_template.js" onload="tinymce.dom.ScriptLoader._onLoad(this,'https://web.archive.org/assets/js/tiny_mce/themes/advanced/editor_template.js',1);"></script><script type="text/javascript" src="https://web.archive.org/assets/js/tiny_mce/themes/advanced/langs/en.js"></script>
+			google.load("jquery", "1.3.2");
+		</script>
+		<script type="text/javascript" src="/assets/js/swfobject.1251120803.js"></script>
 		
-			</head>
+						<!--[if IE]>
+		<link rel="stylesheet" href="/assets/css/ie.1251121266.css" type="text/css" media="screen" title="ie-styles" />
+		<![endif]-->
+		
+				<!-- tinyMCE -->
+	</head>
 	
 	<body id="body">
 		
@@ -82,7 +57,7 @@
 								<div align="left" class="wrap">
 				<div id="subhead-left">
 					<h2>What is this?</h2>
-					<p>Publr is a free, easy to use micro-blogging service.</p>
+					<p>Publr is a free, easy to use blogging service.</p>
 				</div>
 				<div id="subhead-right">
 					<a href="/signup/"><img src="/assets/images/create-account.png"></a>
@@ -161,11 +136,15 @@
 			</div>
 		</div>
 		
+		<script type="text/javascript" src="/assets/js/publr_1251120823.js"></script>
+
+				
 		<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 		</script>
 		<script type="text/javascript">
 		_uacct = "UA-1452374-8";
 		urchinTracker();
 		</script>
+		
 	
 </body></html>
